--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
   "devDependencies": {
