--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
