--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/native": "^5.7.4",
