--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.9.1",
     "expo": "~39.0.2",
     "expo-calendar": "^8.5.0",
+    "expo-camera": "^9.0.0",
     "expo-image-manipulator": "^8.3.0",
     "expo-image-picker": "^9.1.1",
     "expo-mail-composer": "^8.4.0",
