--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "expo": "~39.0.2",
+    "expo-asset": "^8.2.0",
     "expo-calendar": "^8.5.0",
     "expo-camera": "^9.0.0",
     "expo-image-manipulator": "^8.3.0",
